# vm-benchmarks

./: .gitmodules  Cargo.toml  LICENSE
assets/shaders/: fragment_color.glsl  vertex_transform.glsl
vm-benchmarks/: Cargo.toml  build.rs  rustfmt.toml
vm-benchmarks/src/: lib.rs  main.rs
vm-benchmarks/src/modules/: mod.rs  quads.rs
