[package]
name = "vm-benchmarks"
version = "0.1.0"
authors = ["Andrey Kabylin <andrey@kabylin.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vm = { path = "../vm" }
vm_math = { path = "../vm_math/public/rust/vm_math" }
env_logger = "0.8.2"
log = "0.4.13"
